--- a/tests/component_tests/jablotron/test_jablotron_esp32.yaml
+++ b/tests/component_tests/jablotron/test_jablotron_esp32.yaml
@@ -25,7 +25,9 @@ binary_sensor:
     name: "Alarm entry delay"
 
 text_sensor:
-  - { id: info, platform: jablotron_info, name: "Jablotron Info" }
+  - platform: jablotron_info
+    id: jablo_info
+    name: "Jablotron Info"
   - id: entry_alarm
     platform: jablotron_section
     index: 1
